--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node_modules/.bin/nodemon index.js",
     "start": "node index.js",
     "build:ui": "rm -rf build && cd ../frontend/ && npm run build --prod && cp -r build ../backend/",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+    "deploy:full": "npm run build:ui && git add . && git commit -m '..' && npm run deploy",    
     "logs:prod": "heroku logs --tail"
   },
   "author": "",
