--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node_modules/.bin/nodemon index.js",
     "start": "node index.js",
+    "deploy": "git push heroku master",
     "build:ui": "rm -rf build && cd ../frontend/ && npm run build --prod && cp -r build ../backend/",
     "deploy:full": "npm run build:ui && git add . && git commit -m '..' && npm run deploy",    
     "logs:prod": "heroku logs --tail"
