--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "start": "node index.js",
     "deploy": "git push heroku master",
     "build:ui": "rm -rf build && cd ../frontend/ && npm run build --prod && cp -r build ../backend/",
-    "deploy:full": "npm run build:ui && git add . && git commit -m '..' && npm run deploy",    
+    "deploy:full": "npm run build:ui && git add . && git commit -m '..' && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "mongoose": "^5.9.25"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
