--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node_modules/.bin/nodemon index.js",
-    "start": "node index.js",
+    "test": "NODE_ENV=test node_modules/.bin/jest --verbose --runInBand",
+    "dev": "NODE_ENV=development node_modules/.bin/nodemon index.js",
+    "start": "NODE_ENV=production node index.js",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "deploy": "git push heroku master",
     "build:ui": "rm -rf build && cd ../frontend/ && npm run build --prod && cp -r build ../backend/",
     "deploy:full": "npm run build:ui && git add . && git commit -m '..' && npm run deploy",
@@ -16,14 +17,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "http": "0.0.1-security",
-    "mongoose": "^5.9.25"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.25",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
-    "nodemon": "^2.0.4"
+    "jest": "^26.2.2",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
